--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,9 @@ body, html {
 }
 ul { list-style: none; padding-left: 5px; }
 a { color:blue; text-decoration: none;}
+a:hover{
+    color:green;
+}
 .bar {
     background-color: #f9f9fb;
     padding:15px;
@@ -35,4 +38,18 @@ a { color:blue; text-decoration: none;}
 }
 figure {
     text-align: center;
+}
+.logo{
+    margin: 10px;
+}
+figure > img{
+    width: 500px;
+}
+.table{
+    margin: 20px;
+    padding: 15px;
+    text-align: center;
+}
+table > tbody > tr > td{
+    padding: 20px;
 }
